# claude-atlas-framework

./: .env.example  .gitignore  CLAUDE.md  projects.md  tasks.md
args/: contacts.yaml  llm_config.yaml  pipelines.yaml  voice_config.yaml
context/: scanner_playbook.md
context/contractor_foreman/: integration_scope.md
docs/: ClawdBot Opus 4.6 Prompt.md  How to architect chat.md  gnosticism
docs/foundation_routing/: Foundation routing Sept-12-24.md
goals/: manifest.md
memory/: MEMORY.md  personal.md
memory/conversations/: 2026-02-04.md
memory/logs/: 2026-02-04.md  2026-02-05.md
memory/transcripts/: 2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  INDEX.md
reports/Hans Discord/: 2026-02-17_institutional_research_synthesis.md
reports/research/: 2026-02-22_Metals_Miners_Capital_Reversal.md
tests/: test_fetch_markdown.py  test_kb.py  test_voice.py
tools/: manifest.md
tools/data/: market_data.py  technical_indicators.py
tools/discord/: daily_pull.py  export_channel.py  grudem_general_chat.json  risk_gauge_full.json
tools/esphome/: ha_automations.yaml  office-ble-proxy.yaml
tools/kb/: kb_ingest.py  kb_schema.py  kb_search.py  kb_utils.py
tools/llm/: __init__.py  base.py  orchestrator.py  pyproject.toml
tools/llm/clients/: __init__.py  codex_client.py  gemini_client.py  grok_client.py  qwen_local.py
tools/voice/: call.py  (+1 more)
(+14 files in other folders)
